--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
-    "recharts": "^3.1.0"
+    "react-tsparticles": "^2.12.2",
+    "recharts": "^3.1.0",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
