--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
     "@shadcn/ui": "^0.0.4",
+    "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.526.0",
@@ -20,6 +21,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "react-tsparticles": "^2.12.2",
     "recharts": "^3.1.0",
     "tsparticles": "^3.9.1"
